--- a/src/main/resources/META-INF/resources/frontend/rotated_marker.css
+++ b/src/main/resources/META-INF/resources/frontend/rotated_marker.css
@@ -216,3 +216,16 @@
     top: -13px;
     left: -13px;
 }
+
+.border {
+    background-position: 0px -50px;
+    width: 25px;
+    height: 25px;
+    display: block;
+    background-image: url('../img/transparentShipIcons.png');
+    background-repeat: no-repeat;
+    transform-origin: center center;
+    position: relative;
+    top: -13px;
+    left: -13px;
+}
